--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@react-pdf/renderer": "^3.3.8",
     "animejs": "^3.2.2",
+    "antd": "^5.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -29,6 +32,6 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "gh-pages": "^6.1.1",
     "react-router-dom": "^6.21.0",
-    "vite": "^5.0.0"
+    "vite": "^5.2.10"
   }
 }
